# Game_Engine_II

VulkanGameEngine/: CMakeLists.txt  compile.sh  imgui.ini  sources.txt
VulkanGameEngine/include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
VulkanGameEngine/include/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
VulkanGameEngine/shaders/: point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_batch_shader.vert  simple_batch_shader.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
VulkanGameEngine/src/: VGE_app.cpp  VGE_app.hpp  VGE_buffer.cpp  VGE_camera.cpp  VGE_camera.hpp  VGE_default_render_system.cpp  VGE_default_render_system.hpp  VGE_device.cpp  VGE_device.hpp  VGE_frame_info.cpp  VGE_frame_info.hpp  VGE_game_object.cpp  VGE_game_object.hpp  VGE_mesh.cpp  VGE_mesh.hpp  VGE_renderer.hpp  VGE_swap_chain.cpp  VGE_swap_chain.hpp  VGE_window  VGE_window.cpp  VGE_window.hpp  keyboard_controller.cpp  keyboard_controller.hpp  main  main.cpp  pch.h
VulkanGameEngine/src/engine/: VGE_buffer.cpp  VGE_buffer.hpp  VGE_descriptors.cpp  VGE_descriptors.hpp  VGE_device.cpp  VGE_device.hpp  VGE_engine.cpp  VGE_engine.hpp  VGE_pipeline.cpp  VGE_pipeline.hpp  VGE_renderer.cpp  VGE_renderer.hpp  VGE_swap_chain.cpp  VGE_window.hpp
VulkanGameEngine/src/game/: VGE_app.cpp  VGE_app.hpp  VGE_camera.cpp  VGE_default_render_system.cpp  VGE_default_render_system.hpp  VGE_frame_info.hpp  VGE_game_object.cpp  VGE_mesh.cpp  VGE_mesh.hpp  component.cpp  component.hpp  component_manager.cpp  game_object.cpp  game_object.hpp  keyboard_controller.cpp  keyboard_controller.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
VulkanGameEngine/src/game/components/: component.cpp  component.hpp  component_manager.cpp  component_manager.hpp
VulkanGameEngine/src/game/gui/: gui_manager.cpp  gui_manager.hpp
VulkanGameEngine/src/game/render_systems/: VGE_pointlight_render_system.cpp  VGE_pointlight_render_system.hpp
VulkanGameEngine/src/game/scene/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
VulkanGameEngine/src/game/scene/scenes/: default_scene.cpp  default_scene.hpp  default_scene_2.cpp  default_scene_2.hpp
